--- a/css/blog-home.css
+++ b/css/blog-home.css
@@ -1,13 +1,15 @@
-/*!
- * Start Bootstrap - Blog Home HTML Template (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
 
 footer {
-    margin: 50px 0;
+    margin: 5px 0;
+}
+
+article:hover{
+        background-color: aquamarine;
+}
+
+article:hover{
+    box-shadow: 0px 0px 15px 15px white;
 }
